# amof

./: .gitignore  AGENT_GUIDE.md  AMOF_README.md  AMOF_SYSTEM_DESIGN.md  CHANGELOG.md  CLI_SPEC.md  CONTEXT_SPEC.md  GUARDRAILS.md  LICENSE  README.md  ROADMAP.md  amof.yaml  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
contracts/: INDEX.md  README.md  agent-run-result.schema.json  bootstrap-failure-receipt.schema.json  bootstrap-provider-configuration-receipt.schema.json  bootstrap-sha256-manifest.schema.json  bootstrap-source-checkout-receipt.schema.json  bootstrap-toolchain-receipt.schema.json  canonical-mission-packet.schema.json  director-plan-result.schema.json  execution-handoff-result.schema.json  external-agent-plan-execute-request.schema.json  studio-event.schema.json  studio-session.schema.json  workspace-receipt.schema.json
docs/: governed-cognition-runtime.md  remote-ial.md
releases/: v2.6.1.json  v2.8.1.json  v3.1.0.json
scripts/: amof-agent  amof-aliases.sh  amof-completion.bash  amof-completion.zsh  amof-orch-run  amof.py  bootstrap_sanitized_final_marker.py  bootstrap_sanitized_promote_marker.py  build-gmd-app.sh  build-local-cluster-builder.sh  build-local-images.sh  build-standalone-amof.sh  cluster-builder-docker-wrapper.sh  delete-index.sh  deploy-uc-console.sh  extract-cursor-chats.py  extract-cursor-chats.sh  github-push-intake.py  init-local-postgres.sh  install-amof.sh  install-local.sh  opensandbox-smoke.py  runpod_t1_drive.py  smoke-execution-e2e-safe.sh  smoke-no-pipx-install.sh  smoke-standalone-amof.sh  smoke-test-stack.sh  smoke_capture_context_local.py  stage-release-umbrella.sh  test-amof-orch-run.sh  test-opensandbox-smoke.sh
tests/: __init__.py  test_agent_request_json_adapter.py  test_agent_runtime_profile.py  test_app_paths.py  test_authority_ledger.py  test_batch_contract_public_facade.py  test_bedrock_support.py  test_bootstrap_bundle_cli.py  test_bootstrap_contract_cli.py  test_builtin_code_tool_failure_semantics.py  test_canonical_repo_write_guard.py  test_chat_approved_handoff.py  test_chat_intake_sessions.py  test_chat_planning.py  (+46 more)
(+286 files in other folders)
