[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amof"
version = "2.0.1"
description = "Agentic Multirepo Operating Framework"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
amof = "amof.__main__:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["amof*"]
