[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amof"
version = "2.6.3"
description = "Agentic Operations Fabric"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
memory = [
    "chromadb>=0.4.22",
    "pysqlite3-binary>=0.5.0",
]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
amof = "amof.__main__:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["amof*"]
